Complete Part 1, Task 2: Added responsive pricing table with animations

--- a/part_01/task_02/index.html
+++ b/part_01/task_02/index.html
@@ -26,7 +26,7 @@
         <div class="pricing-content" id="premium">
           <h2>Premium Plan</h2>
           <p class="pricing-description">For enterprises needing extensive resources and support.</p>
-          <p class="pricing-price">$99/month</p>
+          <p class="pricing-price">₹99/month</p>
           <ul class="pricing-features">
             <li>100 GB Storage</li>
             <li>Unlimited Bandwidth</li>
@@ -39,7 +39,7 @@
         <div class="pricing-content" id="standard">
           <h2>Standard Plan</h2>
           <p class="pricing-description">Ideal for growing businesses with more needs.</p>
-          <p class="pricing-price">$39/month</p>
+          <p class="pricing-price">₹39/month</p>
           <ul class="pricing-features">
             <li>25 GB Storage</li>
             <li>50 GB Bandwidth</li>
@@ -52,7 +52,7 @@
         <div class="pricing-content" id="basic">
           <h2>Basic Plan</h2>
           <p class="pricing-description">Perfect for individuals or small teams needing essential features.</p>
-          <p class="pricing-price">$19/month</p>
+          <p class="pricing-price">₹19/month</p>
           <ul class="pricing-features">
             <li>5 GB Storage</li>
             <li>10 GB Bandwidth</li>
